--- a/VC90/90ScriptDev2.vcproj
+++ b/VC90/90ScriptDev2.vcproj
@@ -2238,15 +2238,11 @@
 							>
 						</File>
 						<File
-							RelativePath="..\scripts\northrend\ulduar\ulduar\boss_xt002.cpp"
+							RelativePath="..\scripts\northrend\ulduar\ulduar\boss_xt_002.cpp"
 							>
 						</File>
 						<File
 							RelativePath="..\scripts\northrend\ulduar\ulduar\boss_yogg_saron.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\scripts\northrend\ulduar\ulduar\def_ulduar.h"
 							>
 						</File>
 						<File
@@ -2258,7 +2254,7 @@
 							>
 						</File>
 						<File
-							RelativePath="..\scripts\northrend\ulduar\ulduar\ulduar_teleport.cpp"
+							RelativePath="..\scripts\northrend\ulduar\ulduar\ulduar.h"
 							>
 						</File>
 					</Filter>
