make VC100 happy

--- a/VC100/100ScriptDev2.vcxproj
+++ b/VC100/100ScriptDev2.vcxproj
@@ -221,6 +221,7 @@
     <ClCompile Include="..\include\sc_instance.cpp" />
     <ClCompile Include="..\include\sc_outdoor_pvp.cpp" />
     <ClCompile Include="..\scripts\battlegrounds\battleground.cpp" />
+    <ClCompile Include="..\scripts\custom\custom_cybernetic.cpp" />
     <ClCompile Include="..\scripts\custom\npc_arena_honor.cpp" />
     <ClCompile Include="..\scripts\custom\teleguy.cpp" />
     <ClCompile Include="..\scripts\eastern_kingdoms\alterac_mountains.cpp" />
@@ -440,7 +441,7 @@
     <ClCompile Include="..\scripts\kalimdor\razorfen_downs\boss_amnennar_the_coldbringer.cpp" />
     <ClCompile Include="..\scripts\kalimdor\razorfen_downs\razorfen_downs.cpp" />
     <ClCompile Include="..\scripts\kalimdor\razorfen_kraul\instance_razorfen_kraul.cpp" />
-	<ClCompile Include="..\scripts\kalimdor\razorfen_kraul\razorfen_kraul.cpp" />
+    <ClCompile Include="..\scripts\kalimdor\razorfen_kraul\razorfen_kraul.cpp" />
     <ClCompile Include="..\scripts\kalimdor\ruins_of_ahnqiraj\boss_ayamiss.cpp" />
     <ClCompile Include="..\scripts\kalimdor\ruins_of_ahnqiraj\boss_buru.cpp" />
     <ClCompile Include="..\scripts\kalimdor\ruins_of_ahnqiraj\boss_kurinnaxx.cpp" />
@@ -591,23 +592,22 @@
     <ClCompile Include="..\scripts\northrend\ulduar\halls_of_stone\boss_sjonnir.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\halls_of_stone\halls_of_stone.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\halls_of_stone\instance_halls_of_stone.cpp" />
-    <ClCompile Include="..\scripts\northrend\ulduar\ulduar\assembly_of_iron.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_algalon.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_auriaya.cpp" />
-    <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_flame_leviathan.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_freya.cpp" />
-    <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_general_vezax.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_hodir.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_ignis.cpp" />
+    <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_iron_council.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_kologarn.cpp" />
+    <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_leviathan.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_mimiron.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_razorscale.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_thorim.cpp" />
+    <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_vezax.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_xt_002.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_yogg_saron.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\instance_ulduar.cpp" />
     <ClCompile Include="..\scripts\northrend\ulduar\ulduar\ulduar.cpp" />
-    <ClCompile Include="..\scripts\northrend\ulduar\ulduar\ulduar_teleport.cpp" />
     <ClCompile Include="..\scripts\northrend\utgarde_keep\utgarde_keep\boss_ingvar.cpp" />
     <ClCompile Include="..\scripts\northrend\utgarde_keep\utgarde_keep\boss_keleseth.cpp" />
     <ClCompile Include="..\scripts\northrend\utgarde_keep\utgarde_keep\boss_skarvald_and_dalronn.cpp" />
@@ -707,7 +707,7 @@
     <ClCompile Include="..\scripts\outland\tempest_keep\botanica\boss_high_botanist_freywinn.cpp" />
     <ClCompile Include="..\scripts\outland\tempest_keep\botanica\boss_laj.cpp" />
     <ClCompile Include="..\scripts\outland\tempest_keep\botanica\boss_warp_splinter.cpp" />
-	<ClCompile Include="..\scripts\outland\tempest_keep\the_eye\boss_alar.cpp" />
+    <ClCompile Include="..\scripts\outland\tempest_keep\the_eye\boss_alar.cpp" />
     <ClCompile Include="..\scripts\outland\tempest_keep\the_eye\boss_astromancer.cpp" />
     <ClCompile Include="..\scripts\outland\tempest_keep\the_eye\boss_kaelthas.cpp" />
     <ClCompile Include="..\scripts\outland\tempest_keep\the_eye\boss_void_reaver.cpp" />
@@ -720,7 +720,7 @@
     <ClCompile Include="..\scripts\outland\terokkar_forest.cpp" />
     <ClCompile Include="..\scripts\outland\zangarmarsh.cpp" />
     <ClCompile Include="..\scripts\world\areatrigger_scripts.cpp" />
-	<ClCompile Include="..\scripts\world\bosses_emerald_dragons.cpp" />
+    <ClCompile Include="..\scripts\world\bosses_emerald_dragons.cpp" />
     <ClCompile Include="..\scripts\world\go_scripts.cpp" />
     <ClCompile Include="..\scripts\world\guards.cpp" />
     <ClCompile Include="..\scripts\world\item_scripts.cpp" />
