--- a/VC100/100ScriptDev2.vcxproj.filters
+++ b/VC100/100ScriptDev2.vcxproj.filters
@@ -993,7 +993,7 @@
     <ClCompile Include="..\scripts\kalimdor\razorfen_kraul\instance_razorfen_kraul.cpp">
       <Filter>scripts\kalimdor\razorfen_kraul</Filter>
     </ClCompile>
-	<ClCompile Include="..\scripts\kalimdor\razorfen_kraul\razorfen_kraul.cpp">
+    <ClCompile Include="..\scripts\kalimdor\razorfen_kraul\razorfen_kraul.cpp">
       <Filter>scripts\kalimdor\razorfen_kraul</Filter>
     </ClCompile>
     <ClCompile Include="..\scripts\kalimdor\ruins_of_ahnqiraj\boss_ayamiss.cpp">
@@ -1764,7 +1764,7 @@
     <ClCompile Include="..\scripts\outland\tempest_keep\botanica\boss_warp_splinter.cpp">
       <Filter>scripts\outland\tempest_keep\botanica</Filter>
     </ClCompile>
-	<ClCompile Include="..\scripts\outland\tempest_keep\the_eye\boss_alar.cpp">
+    <ClCompile Include="..\scripts\outland\tempest_keep\the_eye\boss_alar.cpp">
       <Filter>scripts\outland\tempest_keep\the_eye</Filter>
     </ClCompile>
     <ClCompile Include="..\scripts\outland\tempest_keep\the_eye\boss_astromancer.cpp">
@@ -1803,7 +1803,7 @@
     <ClCompile Include="..\scripts\world\areatrigger_scripts.cpp">
       <Filter>scripts\world</Filter>
     </ClCompile>
-	<ClCompile Include="..\scripts\world\bosses_emerald_dragons.cpp">
+    <ClCompile Include="..\scripts\world\bosses_emerald_dragons.cpp">
       <Filter>scripts\world</Filter>
     </ClCompile>
     <ClCompile Include="..\scripts\world\go_scripts.cpp">
@@ -1843,6 +1843,20 @@
     <ClCompile Include="..\scripts\outdoor_pvp\outdoor_pvp_northrend.cpp" />
     <ClCompile Include="..\scripts\outdoor_pvp\outdoor_pvp_outland.cpp" />
     <ClCompile Include="..\ScriptMgr.cpp" />
+    <ClCompile Include="..\scripts\battlegrounds\battlegroundSA.cpp" />
+    <ClCompile Include="..\scripts\world\pet_scripts.cpp" />
+    <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_iron_council.cpp">
+      <Filter>scripts\northrend\ulduar\ulduar</Filter>
+    </ClCompile>
+    <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_vezax.cpp">
+      <Filter>scripts\northrend\ulduar\ulduar</Filter>
+    </ClCompile>
+    <ClCompile Include="..\scripts\northrend\ulduar\ulduar\boss_leviathan.cpp">
+      <Filter>scripts\northrend\ulduar\ulduar</Filter>
+    </ClCompile>
+    <ClCompile Include="..\scripts\custom\custom_cybernetic.cpp">
+      <Filter>scripts\custom</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\base\BSW_ai.h">
